# nightshift

./: .gitignore  README.md  README.zh-CN.md  nightshift.md  pyproject.toml  review.md
docs/: 2026-03-28-workflow-verification-report.md  local-development.md  mvp-walkthrough.md
docs/architecture/: README.md
docs/usage/: README.md  configuration.md  deployment.md  install.md  workflow.md
examples/: nightshift.yaml
examples/issues/: NS-123.yaml
tests/: test_alerts_dispatch.py  test_alerts_policy.py  test_claude_adapter.py  test_cli_smoke.py  test_codex_adapter.py  test_config_loader.py  test_delivery_admission.py  test_delivery_cli.py  test_delivery_models.py  test_delivery_rendering.py  test_delivery_service.py  test_domain_models.py  test_execution_selection_cli.py  test_execution_selection_runner.py  test_execution_selection_selector.py  test_execution_selection_service.py  test_issue_ingestion_admission.py  test_issue_ingestion_bridge_cli.py  test_issue_ingestion_bridge_service.py  test_issue_ingestion_cli.py  test_issue_ingestion_materialize.py  test_issue_ingestion_parser.py  test_issue_ingestion_provenance.py  test_issue_registry.py  test_minimal_report.py  test_overnight_control_loop.py  test_overnight_control_loop_cli.py  test_queue_add_cli.py  test_queue_admission_service.py  test_recovery.py  test_run_orchestrator.py  test_splitter_cli.py  test_splitter_publish.py  test_splitter_review.py  test_splitter_storage.py  test_state_store.py  test_validation_gate.py  test_work_order_materialize.py  test_work_order_parser.py  test_workspace_manager.py
(+148 files in other folders)
