[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightshift"
version = "0.1.0"
description = "NightShift kernel CLI bootstrap."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer",
  "pydantic",
  "PyYAML",
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
